style: fix overflow issues

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -6,10 +6,6 @@
 	--bright-2: hsla(205, 94%, 40%, 1);
 }
 
-.hero * {
-	box-sizing: border-box;
-}
-
 .hero {
 	position: relative;
 	display: flex;
@@ -17,7 +13,8 @@
 	align-items: center;
 	flex-wrap: wrap;
 	min-width: 100%;
-	height: clamp(25rem, 60vh, 100vh);
+	min-height: 50vh;
+
 	text-align: center;
 }
 
@@ -36,7 +33,7 @@
 .hero-text-unit {
 	flex: 1 1 auto;
 	position: relative;
-	font-size: clamp(3rem, 8vw - 0.5rem, 5rem);
+	font-size: clamp(4rem, 8vw - 0.5rem, 5rem);
 	margin-right: 1rem;
 	text-align: center;
 	z-index: 20;
@@ -49,6 +46,10 @@
 }
 
 #hero-text-unit-3 {
+}
+
+.hero-image-container {
+	padding: 5%;
 }
 
 .hero-background {
