--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	flex: 1 1 auto;
+	max-width: 100vw;
 }
 
 .home-entry {
@@ -14,7 +15,6 @@
 .hero-container {
 	display: flex;
 	flex: 1 1 auto;
-	width: 100vw;
 }
 
 .social-container {
